init for development

--- a/app.json
+++ b/app.json
@@ -3,6 +3,8 @@
     "name": "paidy-assignment",
     "slug": "paidy-assignment",
     "version": "1.0.0",
+    "orientation": "portrait",
+    "userInterfaceStyle": "light",
     "assetBundlePatterns": [
       "**/*"
     ]
