--- a/package.json
+++ b/package.json
@@ -16,7 +16,14 @@
     "react-native": "0.72.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@react-native/eslint-config": "^0.74.0",
+    "@types/react": "~18.2.14",
+    "eslint": "^8.52.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "typescript": "^5.1.3"
   },
   "private": true
 }
