--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
     "expo": "~49.0.15",
@@ -18,11 +19,17 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@react-native/eslint-config": "^0.74.0",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^12.3.1",
+    "@types/jest": "^29.5.6",
     "@types/react": "~18.2.14",
+    "@types/react-native": "^0.72.5",
     "eslint": "^8.52.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.1.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "jest": "^29.2.1",
+    "jest-expo": "^49.0.0",
     "typescript": "^5.1.3"
   },
   "private": true
