--- a/package.json
+++ b/package.json
@@ -7,14 +7,19 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
+    "lint": "eslint -c .eslintrc.js src",
     "test": "jest"
   },
   "dependencies": {
     "expo": "~49.0.15",
+    "expo-local-authentication": "~13.4.1",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-safe-area-context": "4.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -30,6 +35,7 @@
     "eslint-plugin-prettier": "^5.0.1",
     "jest": "^29.2.1",
     "jest-expo": "^49.0.0",
+    "tailwindcss": "3.3.2",
     "typescript": "^5.1.3"
   },
   "private": true
