--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -176,5 +176,10 @@ dependencies {
     }
 }
 
+project.ext.vectoricons = {
+    iconFontNames: [ 'Ionicon.ttf' ] // Specify font files
+}
+
+apply from: file("../../node_modules/react-native-vector-icons/fonts.gradle")
 apply from: new File(["node", "--print", "require.resolve('@react-native-community/cli-platform-android/package.json')"].execute(null, rootDir).text.trim(), "../native_modules.gradle");
 applyNativeModulesAppBuildGradle(project)
