--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "eslint -c .eslintrc.js src",
+    "typecheck": "tsc --project tsconfig.json",
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.18.2",
     "expo": "~49.0.15",
     "expo-local-authentication": "~13.4.1",
     "expo-splash-screen": "~0.20.5",
@@ -19,7 +21,10 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
-    "react-native-safe-area-context": "4.6.3"
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-uuid": "^2.0.1",
+    "react-native-vector-icons": "^10.0.1",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -29,6 +34,8 @@
     "@types/jest": "^29.5.6",
     "@types/react": "~18.2.14",
     "@types/react-native": "^0.72.5",
+    "@types/react-native-vector-icons": "^6.4.16",
+    "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.52.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.1.0",
