--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,10 @@
     "isolatedModules": true,
     "noUnusedLocals": true,
     "sourceMap": true,
-    "strict": true
+    "strict": true,
+    "baseUrl": ".",
+    "paths": {
+      "*": ["src/*"]
+    }
   },
 }
